--- a/css/style.css
+++ b/css/style.css
@@ -15,30 +15,10 @@ h1{
 h2{
     font-size: 50px;
 }
-
-#searchBasket{
-    font-size: 25px;
-    padding-top: 10px;
-    
-}
-
-
-
-.pay-button{
-    border: none;
-    background-color: none;
-    font-family: 'Smooch Sans', sans-serif;
-    font-size: 30px;
-    list-style: none;
-    text-decoration: none;
-    color: #0b1111;
-    
-    
-} 
-
 .nav{
     opacity: 0,5px;
     position: relative;
+    margin: 15px;
 }
 
 .nav .text-sm-center{
@@ -48,17 +28,37 @@ h2{
     text-decoration: none;
     font-weight: 400;
     color: #0b1111;
+    justify-content: center;
 }
 
 .nav-link:hover,
 .nav-link_active {
-  padding: 4px 4px;
-  font-weight: 600;
   transition: 0.5s;
   background-color: #121612;
   color: white;
 }
-
+.pay-button{
+    background-color: black;
+    display: flex;
+    border: none;
+    background-color: none;
+    font-family: 'Smooch Sans', sans-serif;
+    font-size: 30px;
+    list-style: none;
+    text-decoration: none;
+    color: white; 
+    position:fixed;
+    margin-top: 20px;
+    margin-left: 20px;
+    z-index: 1000;
+}
+.pay-button:hover,
+.pay-button_active{
+  transition: 0.5s;
+  background-color: #121612;
+  color: white;
+  
+}
 
 
 .page-content{
@@ -106,6 +106,24 @@ h2{
 }
   
 .add-button:hover{
+    background-color: #121612;
+    color: white;
+}
+
+.remove-button{
+    border: 2px solid;
+    text-align: center;
+    border-radius: 8px;
+    background-color: white;
+    color: black;
+    transition-duration: 0.4s;
+    font-size: 16px;
+    padding: 5px 15px;
+    position: absolute;
+    right: 15px;
+   
+}
+.remove-button:hover{
     background-color: #121612;
     color: white;
 }
